<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:background="@drawable/shape_bs_dialog"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_label_dialog_sheet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/how_doyou_add"
        android:textColor="@color/greenly"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="8dp"
        android:weightSum="1">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_ic_help"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="0.1"
            android:src="@drawable/ic_help"
            app:civ_border_width="1dp"
            app:civ_circle_background_color="@color/black" />


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="0.8"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_add_consultation_public"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:gravity="start"
                android:text="@string/add_consultation_public"
                android:textColor="@color/greenly"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_body_consultationadd_public"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:gravity="start"
                android:text="يمكن لجميع مستخدمي التطبيق رؤية استشارتك والتعليق عليها"
                android:textColor="@color/gray"
                android:textSize="14sp" />
        </LinearLayout>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/goto_consultationadd_public"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:src="@drawable/ic_arrow_back_green" />


    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/gray" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="8dp"
        android:weightSum="1">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ic_sheet_dialog"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="0.1"

            android:src="@drawable/ic_privet_consultion" />


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="0.8"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_add_consultation_private"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:gravity="start"
                android:text="@string/add_consultation_private"
                android:textColor="@color/greenly"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_body_consultationadd_private"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:gravity="start"
                android:text="لا يستطيع احد رؤيتها او متابعتها او الرد عليها سوى الطبيب المختص"
                android:textColor="@color/gray"
                android:textSize="14sp" />
        </LinearLayout>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/goto_consultationadd_private"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:src="@drawable/ic_arrow_back_green" />


    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/gray" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="8dp"
        android:weightSum="1">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_restaurant_dialog"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="0.1"
            android:src="@drawable/ic_restaurant" />


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="0.8"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_add_new_eater"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:gravity="start"
                android:text="@string/add_new_eater"
                android:textColor="@color/greenly"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_body_add_neweater"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:gravity="start"
                android:text="إضافة اكلة جديدة يستطيع الجميع رؤيتها والتعليق عليها"
                android:textColor="@color/gray"
                android:textSize="14sp" />
        </LinearLayout>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/goto_add_neweater"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:src="@drawable/ic_arrow_back_green" />


    </LinearLayout>

</LinearLayout>