<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="16dp"
        app:cardElevation="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="16dp"
            android:weightSum="1">

            <ImageView
                android:id="@+id/img_itemfood"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:scaleType="centerCrop"
                android:background="@drawable/shape_corner24"
                android:src="@drawable/donat" />


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="0.35"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_name_food"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="start"
                    android:text="@string/name_food"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_numof_people_eat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:drawableStart="@drawable/ic_people"
                    android:drawablePadding="4dp"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center|start"
                    android:text="@string/numof_people"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
                <TextView
                    android:id="@+id/tv_name_publisher"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:drawableStart="@drawable/profile_img"
                    android:drawablePadding="4dp"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center|start"
                    android:text="@string/name_publisher"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="0.35"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_gravity="end">

                    <TextView
                        android:id="@+id/tv_num_like_to_eat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="0" />

                    <ImageView
                        android:id="@+id/img_like_eat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        android:src="@drawable/like_false"/>
                </LinearLayout>

                <TextView
                    android:id="@+id/tv_time_prepare"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:drawableStart="@drawable/ic_time"
                    android:drawablePadding="4dp"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center|start"
                    android:text="50دقيقة"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
                <TextView
                    android:id="@+id/tv_date_publisher"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:drawableStart="@drawable/ic_calendar_month"
                    android:drawablePadding="4dp"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center|start"
                    android:text="4:50 م"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>


    </androidx.cardview.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>