<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardviweitem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="8dp"
                android:weightSum="1">

                <ImageView
                    android:id="@+id/profile_image"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_weight="0.1"
                    android:src="@drawable/profile_img" />


                <TextView
                    android:id="@+id/tv_name_doctor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.65"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="start"
                    android:text="د.الطبيب"
                    android:textColor="#000000"
                    android:textSize="22sp"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/tv_date_publication"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="0.25"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center"
                    android:text="1h ago"
                    android:textColor="@color/gray"
                    android:textSize="14sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_body_post"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:fontFamily="sans-serif-condensed"
                android:gravity="start"
                android:text="@string/body_post"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/img_content_post"
                android:layout_width="match_parent"
                android:layout_height="196dp"
                android:layout_margin="8dp"
                android:scaleType="centerCrop"
                android:background="@drawable/shape_corner24" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/tv_like_post"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="0.5"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center"
                    android:text="@string/like"
                    android:textColor="@color/paper"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_comment_post"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="0.5"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center"
                    android:text="@string/comment"
                    android:textColor="@color/paper"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">

                <Button
                    android:id="@+id/btn_like"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginBottom="16dp"
                    android:layout_weight="0.5"
                    android:background="@drawable/shape_bottom_post"
                    android:drawableStart="@drawable/like_false"
                    android:gravity="center"
                    android:text="@string/like"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/btn_comment"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginBottom="16dp"
                    android:layout_weight="0.5"
                    android:background="@drawable/shape_bottom_post"
                    android:drawableStart="@drawable/comment"
                    android:gravity="center"
                    android:text="@string/comment"
                    android:textColor="@color/white" />

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>


</LinearLayout>